<resources>
    <string name="app_name">Sterling University</string>
    <string name="action_add_sample_data">Add sample data</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_editor">Editor Activity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="enter_term_name">Enter term name</string>
    <string name="title_activity_terms">Terms</string>
    <string name="home">Home</string>
    <string name="terms">Terms</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="new_term">New Term</string>
    <string name="edit_term">Edit Term</string>
    <string name="delete">Delete</string>
    <string name="courses">Courses</string>
    <string name="title_activity_course_editor">Edit Course</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="term_delete_alert_message">Terms cannot be deleted if they contain courses. Please remove all courses before deleting.</string>
    <string name="course_delete_alert_message">Courses cannot be deleted if they contain assessments. Please remove all assessments before deleting.</string>
    <string name="alert_ok_text">Got it</string>
    <string name="enter_start_date">Enter Start Date MM/DD/YYYY HH:MM:SS (AM or PM)</string>
    <string name="enter_end_date">Enter End Date MM/DD/YYYY HH:MM:SS (AM or PM)</string>
    <string name="term_name">Term Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="course_name">Course Name</string>
    <string name="edit_course">Edit Course</string>
    <string name="new_course">New Course</string>
    <string name="title_activity_assessment_editor">Edit Assessment</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="enter_assessment_name">Enter Assessment Name</string>
    <string name="due_date">Due Date</string>
    <string name="enter_due_date">MM/DD/YYYY HH:MM:SS AM/PM</string>
    <string name="assessments">Assessments</string>
    <string name="mentor_phone_number">Mentor Phone Number</string>
    <string name="enter_mentor_phone_number">Enter mentor phone number</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="enter_mentor_email">Enter mentor email</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="enter_mentor_name">Enter mentor name</string>
    <string name="enter_course_notes_here">Enter course notes here</string>
    <string name="course_notes">Course Notes</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="new_assessment">New Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="status">Status</string>
    <string name="mentor_information">Mentor Information</string>
    <string name="select_mentor">Select Mentor</string>
    <string name="select_mentor_from_list">Select mentor from list</string>
    <string name="courses_can_be_added_once_a_term_is_saved">Courses can be added once a term is saved.</string>
    <string name="must_save_course_text">Mentors, assessments, and course status can be updated after saving course.</string>
    <string name="invalidDateMessage">Please enter a valid start and end date.</string>
    <string name="channel_name">alarm alert</string>
    <string name="channel_description">alarm for start and end dates</string>
    <string name="share">Share</string>
    <string name="must_save_assessment_text">Assessment type can be updated once assessment is saved.</string>
    <string name="set_alarm_button">Set alarm for current start/end dates</string>
    <string name="course_btn_text">Courses</string>
    <string name="title_activity_course_report">Course Report</string>
    <string name="course_report_header_title">Course Title</string>
    <string name="course_report_header_start_date">Start Date</string>
    <string name="course_report_header_end_date">End Date</string>
    <string name="search_placeholder">Type a course title to search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Username or password incorrect"</string>
</resources>
