<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".CourseEditorActivity"
        tools:showIn="@layout/activity_course_editor">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:orientation="vertical">

        <TextView
                android:id="@+id/course_text_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/course_name"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/course_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/enter_course_name"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/course_text_label"
                tools:layout_editor_absoluteX="0dp" />

        <TextView
                android:id="@+id/start_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/start_date"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/course_text"
                tools:layout_editor_absoluteX="0dp" />

        <EditText
                android:id="@+id/start_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_start_date"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/start_date_label"
                tools:ignore="TextFields"
                tools:layout_editor_absoluteX="29dp" />

        <TextView
                android:id="@+id/end_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/end_date"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/start_date_text" />

        <EditText
                android:id="@+id/end_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_end_date"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/end_date_label"
                tools:ignore="TextFields" />

        <Spinner
                android:id="@+id/mentor_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_date_text"/>

        <TextView
                android:id="@+id/mentor_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/mentor_information"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/mentor_spinner" />

        <TextView
                android:id="@+id/mentor_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_mentor_name"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/mentor_information"
                tools:ignore="TextFields" />

        <TextView
                android:id="@+id/mentor_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_mentor_phone_number"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/mentor_name_text"
                tools:ignore="TextFields" />

        <TextView
                android:id="@+id/mentor_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_mentor_email"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/mentor_phone_text"
                tools:ignore="TextFields" />

        <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/status"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mentor_email_text" />

        <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_label" />

        <TextView
                android:id="@+id/notes_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/course_notes"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/status_spinner" />

        <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_course_notes_here"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/notes_label"
                tools:ignore="TextFields" />

        <TextView
                android:id="@+id/assessments_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/assessments"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/notes" />

        <android.support.v7.widget.RecyclerView
                android:id='@+id/recycler_view'
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/assessments_label" />

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view"
                app:srcCompat="@drawable/ic_add" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>