<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".AssessmentEditorActivity"
        tools:showIn="@layout/activity_assessment_editor">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:orientation="vertical">

        <TextView
                android:id="@+id/assessment_text_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assessment_name"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/text_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/assessment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/enter_assessment_name"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/assessment_text_label"
                tools:layout_editor_absoluteX="0dp" />

        <TextView
                android:id="@+id/due_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/due_date"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/assessment_text"
                tools:layout_editor_absoluteX="0dp" />

        <EditText
                android:id="@+id/due_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_due_date"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/due_date_label"
                tools:ignore="TextFields"
                tools:layout_editor_absoluteX="29dp" />

        <Button
                android:id="@+id/set_alarm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCC5B"
                android:inputType="textCapSentences"
                android:text="@string/set_alarm_button"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/due_date_text" />

        <TextView
                android:id="@+id/must_save_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/must_save_assessment_text"
                app:layout_constraintTop_toBottomOf="@+id/set_alarm_btn" />

        <TextView
                android:id="@+id/assessment_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/assessment_type"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/set_alarm_btn"
                tools:layout_editor_absoluteX="0dp" />

        <Spinner
                android:id="@+id/assessment_type_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/assessment_type_label" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>