<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/course_report_header"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bottom_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/course_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/course_report_header_title"
                android:textColor="@color/list_text_color"
                android:textSize="@dimen/list_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/start_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_report_header_start_date"
                android:textColor="@color/list_text_color"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.422"
                app:layout_constraintStart_toEndOf="@+id/course_text"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/end_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_report_header_end_date"
                android:textColor="@color/list_text_color"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_date_text"
                app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
            android:id='@+id/recycler_view'
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_report_header" />


</android.support.constraint.ConstraintLayout>